# lstm_stock_prediction

./: DOCKER_COMPOSE.md  Dockerfile  Dockerfile.api  Dockerfile.training  README.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt  train_pipeline.py
api/: app.py
artifacts/: config.json  model_weights.pt  scaler.pkl
notebooks/: 2.ipynb  exploracao_notebook.ipynb
src/: data_collector.py  model.py  predict.py  preprocessing.py  train.py  utils.py
src/api/: __init__.py  endpoints.py  main.py  schemas.py
src/core/: __init__.py  config.py
src/infra/: __init__.py  data_loader.py  lstm_model.py
src/services/: __init__.py  predictor.py
