[project]
name = "lstm-stock-prediction"
version = "0.1.0"
description = ""
authors = [
    {name = "hguazza",email = "hmguazzelli@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "yfinance (>=0.2.66,<0.3.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "torch (>=2.9.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "lstm_stock_prediction", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
